finish stream block